# Visual-Question-Answering

./: .gitignore  .pre-commit-config.yaml  README.md  Visual_Question_Answering.ipynb  data.py  engine.py  inerence.py  noxfile.py  playground.ipynb  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yaml
notebooks/: playground.ipynb
src/vqa/: data.py  engine.py  inference.py  train.py
tests/: test_data.py  test_engine.py  test_inference.py  test_train.py
